# AmazingHand

./: Cargo.toml  GPU_ACCELERATION_STATUS.md  Hand base connet_connector_so100.STL  LICENSE  README.md  amazing_hand_tracker_simple.py  dataflow_real.yml  dataflow_simu.yml  dataflow_tracking_real.yml  dataflow_tracking_simu.yml  requirements_gpu.txt  requirements_simple.txt
AHControl/: README.md
AHSimulation/: README.md  pyproject.toml
AHSimulation/AHSimulation/: mj_mink_right.py
AHSimulation/AHSimulation/AH_Right/mjcf/: config.json  keyframes.xml  robot.xml  scene.xml
AHSimulation/AHSimulation/AH_Right/mjcf/assets/: dist.part  dist.stl  dist_shell.part  finger_frame_1.part  finger_frame_1.stl  finger_frame_2.part  gimbal.part  link.part  parallel_pin_2_x_10__fee063fca0c8b40e46bbc4ffff61d999.stl  part_1.part  part_1__2.part  ph_pan_head_screw_m2x0_40_x_10__2803432263e518bbd16bccbbef8784ed.stl  prox.part  prox.stl  prox_shell.part  prox_shell.stl  r_hand_plate.part  r_hand_plate.stl  r_wrist_interface.part  r_wrist_interface.stl  rotule_ball.part  rotule_lever.part
ArduinoExample/: Amazing_Hand-Finger_Test.ino  Amazing_Hand_Demo.ino  README.md
Demo/: README.md  dataflow_angle_simu.yml
PythonExample/: AmazingHand_Demo.py  AmazingHand_FingerTest.py  AmazingHand_Hand_FingerMiddlePos.py  README.md
cad/: Amazing Hand Parts - Distal_Shell.step  Amazing Hand Parts - Finger_Frame-1.step  Amazing Hand Parts - Finger_Frame-2.stl  Amazing Hand Parts - Link.stl  Amazing Hand Parts - Proximal.step  Amazing Hand Parts - R-Hand_Plate.step  BallJoint_Rod - Spacer.step  (+8 more)
(+60 files in other folders)
